WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84486
Crash in getOrDrawNodeHighlight after
r114659
https://bugs.webkit.org/show_bug.cgi?id=84486
Summary
Crash in getOrDrawNodeHighlight after r114659
Xianzhu Wang
Reported
2012-04-20 13:27:52 PDT
See crbug.com/124382.
Attachments
patch
(1.40 KB, patch)
2012-04-20 13:52 PDT
,
Xianzhu Wang
dbates
: review+
Details
Formatted Diff
Diff
patch for landing
(1.46 KB, patch)
2012-04-20 14:35 PDT
,
Xianzhu Wang
dbates
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xianzhu Wang
Comment 1
2012-04-20 13:52:32 PDT
Created
attachment 138155
[details]
patch
Jer Noble
Comment 2
2012-04-20 14:18:04 PDT
***
Bug 84492
has been marked as a duplicate of this bug. ***
Jer Noble
Comment 3
2012-04-20 14:22:21 PDT
Comment on
attachment 138155
[details]
patch Looks good to me. After applying the patch, the crash no longer occurs on that test.
Jer Noble
Comment 4
2012-04-20 14:29:17 PDT
And by "that test", I mean inspector/elements/elements-panel-selection-on-refresh.html, which was the crashing test in
bug 84492
, which was marked as a dup of this bug.
Daniel Bates
Comment 5
2012-04-20 14:30:11 PDT
Comment on
attachment 138155
[details]
patch Looks good to me. For completeness, Jer Noble told me on IRC that the test case inspector/elements/elements-panel-selection-on-refresh.html covers this crash.
Daniel Bates
Comment 6
2012-04-20 14:31:34 PDT
Comment on
attachment 138155
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=138155&action=review
> Source/WebCore/ChangeLog:8 > + No new tests. Just a quick fix of a crash caused by
r114659
.
Per
comment 5
, I suggest that we mention that this fix is covered by test inspector/elements/elements-panel-selection-on-refresh.html.
Xianzhu Wang
Comment 7
2012-04-20 14:35:50 PDT
Created
attachment 138167
[details]
patch for landing Test case mentioned in ChangeLog. Thanks for review!
Jer Noble
Comment 8
2012-04-20 14:38:17 PDT
Committed
r114783
: <
http://trac.webkit.org/changeset/114783
>
Daniel Bates
Comment 9
2012-04-20 14:39:29 PDT
Comment on
attachment 138167
[details]
patch for landing cq-'ing this patch since it landed in <
http://trac.webkit.org/changeset/114783
>.
Jer Noble
Comment 10
2012-04-20 14:39:58 PDT
(In reply to
comment #7
)
> Created an attachment (id=138167) [details] > patch for landing > > Test case mentioned in ChangeLog. Thanks for review!
Landed this patch manually. (I updated the ChangeLog to mention the crashing test, so my wording is not exactly the same as your most recently uploaded patch, but the meaning is there.) :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug