Crash in getOrDrawNodeHighlight after r114659 https://bugs.webkit.org/show_bug.cgi?id=84486

Patch by Xianzhu Wang <wangxianzhu@chromium.org> on 2012-04-20
Reviewed by Daniel Bates.

No new tests. Fixes a crash in test: inspector/elements/elements-panel-selection-on-refresh.html.

* inspector/DOMNodeHighlighter.cpp:

Canonical link: https://commits.webkit.org/101974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114783 268f45cc-cd09-0410-ab3c-d52691b4dbfc